fix: correct medium contrast variable name

--- a/src/Themes/Light.css
+++ b/src/Themes/Light.css
@@ -26,7 +26,7 @@
   --danger-contrast: #fff;
   /** medium **/
   --medium-color: #92949c;
-  --medium--contrast: #000;
+  --medium-contrast: #000;
 
   --disabled-color: #7f7f7f;
 }
